--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,16 @@
     <title>Title</title>
 </head>
 <body>
-    <h1 th:text="'Hello World 4343'">Hello World.......</h1>
+    <h1>My Recipes!!</h1>
+    <table>
+        <tr>
+            <th>ID</th>
+            <th>Description</th>
+        </tr>
+        <tr th:each="recipe : ${recipes}">
+            <td th:text="${recipe.id}" />
+            <td th:text="${recipe.description}" />
+        </tr>
+    </table>
 </body>
 </html>
