--- a/src/main/resources/templates/recipe/show.html
+++ b/src/main/resources/templates/recipe/show.html
@@ -27,7 +27,6 @@
             <h1 class="panel-title" th:text="${recipe.description}">Recipe Description Here!</h1>
           </div>
           <div class="panel-body">
-
             <div class="row">
               <div class="col-md-3">
                 <h5>Categories:</h5>
@@ -40,13 +39,12 @@
                 </ul>
               </div>
             </div>
-
             <div class="row">
               <div class="col-md-3">
                 <h5>Prep Time:</h5>
               </div>
               <div class="col-md-3">
-                <p th:text="${(recipe.prepTime) + ' Min'}">30 min</p>
+                <p th:text="${(recipe.prepTime) +  '  Min'}">30 min</p>
               </div>
               <div class="col-md-3">
                 <h5>Difficulty:</h5>
@@ -60,7 +58,7 @@
                 <h5>Cooktime:</h5>
               </div>
               <div class="col-md-3">
-                <p th:text="${(recipe.cookTime) + ' Min'}">30 min</p>
+                <p th:text="${(recipe.cookTime  +  '  Min')}">30 min</p>
               </div>
               <div class="col-md-3">
                 <h5>Servings:</h5>
@@ -80,15 +78,14 @@
                 <h5>URL:</h5>
               </div>
               <div class="col-md-3">
-                <p th:text="${recipe.url}">http://www.example.com</p>
+                <p><a href="#" th:href="@{recipe.url}" >View Original</a></p>
               </div>
             </div>
           </div>
         </div>
-
         <div class="panel panel-primary">
           <div class="panel-heading">
-            <h1 class="panel-title">Ingredients</h1>
+            <h1 class="panel-title" >Ingredients</h1>
           </div>
           <div class="panel-body">
             <div class="row">
@@ -98,15 +95,13 @@
                   <li th:remove="all">1 Teaspoon of chocolate</li>
                   <li th:each="ingredient : ${recipe.ingredients}"
                       th:text="${(ingredient.getAmount() +
-                      ' ' + ingredient.uom.getDescription() +
-                      ' - ' + ingredient.getDescription())}"
-                  >1 Teaspoon of Sugar</li>
+                                        ' ' + ingredient.uom.getDescription() +
+                                        ' - ' + ingredient.getDescription())}">1 Teaspoon of Sugar</li>
                 </ul>
               </div>
             </div>
           </div>
         </div>
-
         <div class="panel panel-primary">
           <div class="panel-heading">
             <h1 class="panel-title" >Directions</h1>
