--- a/src/main/resources/templates/recipe/show.html
+++ b/src/main/resources/templates/recipe/show.html
@@ -22,6 +22,7 @@
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
       <div class="pannel-group">
+
         <div class="panel panel-primary">
           <div class="panel-heading">
             <h1 class="panel-title" th:text="${recipe.description}">Recipe Description Here!</h1>
@@ -83,9 +84,18 @@
             </div>
           </div>
         </div>
+
+        <!--        Ingredients       -->
         <div class="panel panel-primary">
           <div class="panel-heading">
-            <h1 class="panel-title" >Ingredients</h1>
+            <div class="row">
+              <div class="col-md-11 ">
+                <h1 class="panel-title">Ingredients</h1>
+              </div>
+              <div class="col-md-1">
+                <a class="btn btn-default" href="#" th:href="@{'/recipe/' + ${recipe.id} + '/ingredients'}" role="button">View</a>
+              </div>
+            </div>
           </div>
           <div class="panel-body">
             <div class="row">
@@ -102,6 +112,8 @@
             </div>
           </div>
         </div>
+
+        <!--        Direction-->
         <div class="panel panel-primary">
           <div class="panel-heading">
             <h1 class="panel-title" >Directions</h1>
@@ -114,6 +126,8 @@
             </div>
           </div>
         </div>
+
+        <!--        Notes       -->
         <div class="panel panel-primary">
           <div class="panel-heading">
             <h1 class="panel-title" >Notes</h1>
@@ -126,6 +140,8 @@
             </div>
           </div>
         </div>
+
+
       </div>
     </div>
   </div>
